--- a/test/fixtures/payment_methods.yml
+++ b/test/fixtures/payment_methods.yml
@@ -4,6 +4,7 @@ credit_card:
   price_incl_vat: 0
   vat_rate_id: "<?= $vat_rates["twenty_one"]->getId() ?>"
   payment_gateway_id: 1
+  payment_gateway_config: "{\"payment_method\":\"card\"}"
 
 bank_transfer:
   code: "bt"
