--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "aristath/ari-color": "^1.1.1",
         "mysutka/product_feed_generator": "^0.1.7",
         "sunfoxcz/spayd-php": "^1.0",
-        "bacon/bacon-qr-code": "^1.0",
+        "bacon/bacon-qr-code": "^1.0|^2.0",
         "atk14/csv-reader": "^1.1",
         "atk14/csv-writer": "^1.1",
         "atk14/sql-builder": "^3.2|^4.1",
