Card::getTechnicalSpecification() improved - a code can be passed as the parameter

--- a/test/fixtures/technical_specification_keys.yml
+++ b/test/fixtures/technical_specification_keys.yml
@@ -28,7 +28,7 @@ weight:
 
 decaffeinated:
   key: "decaffeinated"
-  code: "decaffeinated"
+  code: "decaffeinated_code"
   technical_specification_key_type_id: "<?= TechnicalSpecificationKeyType::GetInstanceByCode("boolean")->getId() ?>"
   key_localized_en: "Decaffeinated"
   key_localized_cs: "Bez kofeinu" 
